New project page & added RPS code

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,10 +30,13 @@
                         <a tabindex="2" href="about.html" class="active">About Me</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                        <a tabindex="3" href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                        <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                    </li>
+                    <li>
+                        <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                             class="github-link">GitHub</a>
                     </li>
                 </ul>
@@ -49,10 +52,13 @@
                             <a tabindex="2" href="about.html" class="active">About Me</a>
                         </li>
                         <li>
-                            <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                            <a tabindex="3" href="projects.html">Projects</a>
                         </li>
                         <li>
-                            <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                            <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                        </li>
+                        <li>
+                            <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                                 class="github-link">GitHub</a>
                         </li>
                     </ul>
@@ -71,10 +77,10 @@
             <h2>Bio</h2>
 
             <p>
-                I am a Computer Science Alumni from <a target="_blank"
+                Computer Science Alumni from <a target="_blank"
                     href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
-                    Texas A&M University-Commerce</a>. I am currently a Webmaster for the Hayward Unified School
-                District managing over 30+ websites within the district.
+                    Texas A&M University-Commerce</a>. Currently a Webmaster for the Hayward Unified School
+                District.
             </p>
         </div>
 
