--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
 
-        <title>Resume</title>
+        <title>Projects</title>
     </head>
 
     <body>
@@ -30,10 +30,13 @@
                         <a tabindex="2" href="about.html">About Me</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="resume.html" class="resume-link active">Resume</a>
+                        <a tabindex="3" href="projects.html" class="active">Projects</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                        <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                    </li>
+                    <li>
+                        <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                             class="github-link">GitHub</a>
                     </li>
                 </ul>
@@ -46,13 +49,16 @@
                             <a tabindex="1" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a tabindex="2" href="about.html" class="active">About Me</a>
+                            <a tabindex="2" href="about.html">About Me</a>
                         </li>
                         <li>
-                            <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                            <a tabindex="3" href="projects.html" class="active">Projects</a>
                         </li>
                         <li>
-                            <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                            <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                        </li>
+                        <li>
+                            <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                                 class="github-link">GitHub</a>
                         </li>
                     </ul>
@@ -65,9 +71,11 @@
             </div>
         </div>
 
-        <h1>Resume</h1>
+        <h1>Projects</h1>
 
-        <iframe src="/media/Calvo, Daniel - Resume.pdf#" id="resume"></iframe>
+        <div class="projects">
+            <a href="../projects/rps/index.html"><div class="project rps"></div></a>
+        </div>
 
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
@@ -76,7 +84,6 @@
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             </div>
         </footer>
-
     </body>
 
 </html>
