--- a/pages/resume.html
+++ b/pages/resume.html
@@ -14,7 +14,7 @@
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
 
-        <title>Welcome</title>
+        <title>Resume</title>
     </head>
 
     <body>
@@ -24,16 +24,19 @@
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
                     <li>
-                        <a tabindex="1" href="index.html" class="active">Home</a>
+                        <a tabindex="1" href="index.html">Home</a>
                     </li>
                     <li>
                         <a tabindex="2" href="about.html">About Me</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                        <a tabindex="3" href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                        <a tabindex="4" href="resume.html" class="active resume-link">Resume</a>
+                    </li>
+                    <li>
+                        <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                             class="github-link">GitHub</a>
                     </li>
                 </ul>
@@ -46,13 +49,16 @@
                             <a tabindex="1" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a tabindex="2" href="about.html" class="active">About Me</a>
+                            <a tabindex="2" href="about.html">About Me</a>
                         </li>
                         <li>
-                            <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                            <a tabindex="3" href="projects.html">Projects</a>
                         </li>
                         <li>
-                            <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                            <a tabindex="4" href="resume.html" class="active resume-link">Resume</a>
+                        </li>
+                        <li>
+                            <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
                                 class="github-link">GitHub</a>
                         </li>
                     </ul>
@@ -65,6 +71,9 @@
             </div>
         </div>
 
+        <h1>Resume</h1>
+
+        <iframe src="/media/Calvo, Daniel - Resume.pdf#" id="resume"></iframe>
 
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
@@ -73,6 +82,7 @@
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             </div>
         </footer>
+
     </body>
 
 </html>
