--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <a id="backToProjects" href="../../pages/projects.html">Back to Projects</a>
+        <a id="backToProjects" href="../../projects.html">Back to Projects</a>
         <div class="title fadeIn">Edgar vs. AI</div>
         <div class="welcome">
             <div class="prompt fadeIn">Welcome, Edgar Garcia. Today, we find out if you are awesome enough to beat a
