add Etch a sketch

--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
 
         <div class="projects">
             <a href="../projects/rps/index.html"><div class="project rps"></div></a>
+            <a href="../projects/etch-a-sketch/index.html"><div class="project rps"></div></a>
         </div>
 
         <footer>
