--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                         <a tabindex="1" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a tabindex="2" href="about.html" class="active">About Me</a>
+                        <a tabindex="2" href="about.html" class="active">About</a>
                     </li>
                     <li>
                         <a tabindex="3" href="projects.html">Projects</a>
@@ -49,7 +49,7 @@
                             <a tabindex="1" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a tabindex="2" href="about.html" class="active">About Me</a>
+                            <a tabindex="2" href="about.html" class="active">About</a>
                         </li>
                         <li>
                             <a tabindex="3" href="projects.html">Projects</a>
