--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                         <a tabindex="1" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a tabindex="2" href="about.html">About Me</a>
+                        <a tabindex="2" href="about.html">About</a>
                     </li>
                     <li>
                         <a tabindex="3" href="projects.html" class="active">Projects</a>
@@ -49,7 +49,7 @@
                             <a tabindex="1" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a tabindex="2" href="about.html">About Me</a>
+                            <a tabindex="2" href="about.html">About</a>
                         </li>
                         <li>
                             <a tabindex="3" href="projects.html" class="active">Projects</a>
@@ -74,8 +74,14 @@
         <h1>Projects</h1>
 
         <div class="projects">
-            <a href="../projects/rps/index.html"><div class="project rps"></div></a>
-            <a href="../projects/etch-a-sketch/index.html"><div class="project rps"></div></a>
+            <a href="../projects/rps/index.html">
+                <div class="title">Etch-a-Sketch</div>
+                <div class="project rps"></div>
+            </a>
+            <a href="../projects/etch-a-sketch/index.html">
+                <div class="title">Rock, Paper, Scissors</div>
+                <div class="project eas"></div>
+            </a>
         </div>
 
         <footer>
