--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <!-- Core JS-->
-        <script defer src="/js/core.js"></script>
+        <!-- Scripts -->
+        <script defer src="/js/mobile-nav.js"></script>
+        <script defer src="/js/theme-switch.js"></script>
 
         <!-- Stylesheets -->
         <link href="/css/root.css" type="text/css" rel="stylesheet">
