--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -10,10 +10,9 @@
 
     <body>
         <a id="backToProjects" href="../../projects.html">Back to Projects</a>
-        <div class="title fadeIn">Edgar vs. AI</div>
+        <div class="title fadeIn">You vs. Machine</div>
         <div class="welcome">
-            <div class="prompt fadeIn">Welcome, Edgar Garcia. Today, we find out if you are awesome enough to beat a
-                state of the art AI in a game of Rock, Paper, Scissors! First to 5 wins.</div>
+            <div class="prompt fadeIn">Can you beat Machine in a game of Rock, Paper, Scissors? First to 5 wins.</div>
             <button class="fadeIn">Start</button>
         </div>
         <div class="game hidden">
@@ -31,6 +30,10 @@
                 </div>
                 <div class="ai fadeIn">
                     <div class="name">AI</div>
+                    <div class="score">0</div>
+                </div>
+                <div class="tie fadeIn">
+                    <div class="name">Tie</div>
                     <div class="score">0</div>
                 </div>
             </div>
