RPS return to home button update

--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -9,7 +9,11 @@
     </head>
 
     <body>
-        <a id="backToProjects" href="../../projects.html">Back to Projects</a>
+        <div class="return">
+            <a id="backToProjects" href="../../projects.html">
+                <button>Back to Projects</button>
+            </a>
+        </div>
         <div class="title fadeIn">You vs. Machine</div>
         <div class="welcome">
             <div class="prompt fadeIn">Can you beat Machine in a game of Rock, Paper, Scissors? First to 5 wins.</div>
