Remove home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
 
-        <title>Welcome</title>
+        <title>About Me</title>
     </head>
 
     <body>
@@ -24,20 +24,17 @@
 
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
-                    <!-- <li>
-                        <a tabindex="1" href="index.html" class="active">Home</a>
-                    </li> -->
                     <li>
-                        <a tabindex="2" href="about.html">About</a>
+                        <a tabindex="1" href="index.html" class="active">About</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="projects.html">Projects</a>
+                        <a tabindex="2" href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                     </li>
                     <li>
-                        <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
+                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
                             class="github-link">GitHub</a>
                     </li>
                 </ul>
@@ -46,20 +43,17 @@
 
                 <div class="mobile-nav-bar">
                     <ul class="mobile-nav-controls" aria-role="navigation">
-                        <!-- <li>
-                            <a tabindex="1" href="index.html" class="active">Home</a>
-                        </li> -->
                         <li>
-                            <a tabindex="2" href="about.html">About</a>
+                            <a tabindex="1" href="index.html" class="active">About</a>
                         </li>
                         <li>
-                            <a tabindex="3" href="projects.html">Projects</a>
+                            <a tabindex="2" href="projects.html">Projects</a>
                         </li>
                         <li>
-                            <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                            <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                         </li>
                         <li>
-                            <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
+                            <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
                                 class="github-link">GitHub</a>
                         </li>
                     </ul>
@@ -72,6 +66,57 @@
             </div>
         </div>
 
+        <h1>Daniel Calvo</h1>
+
+        <div id="bio">
+            <h2>Bio</h2>
+
+            <p>
+                Computer Science Alumni from <a target="_blank"
+                    href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
+                    Texas A&M University-Commerce</a>. Currently a Webmaster for the Hayward Unified School
+                District.
+            </p>
+        </div>
+
+        <div id="interests">
+            <h2>Interests</h2>
+
+            <h3>Finance</h3>
+
+            <div class="interest">
+                <div class="description">
+                    <p>
+                        I am an avid learner of finance and a habitual money saver. I am passionate about simple index
+                        fund investing and thorough budgeting in order to reach my ultimate goal of Financial
+                        Independence and Retiring Early or
+                        <span aria-hidden="true">&#128293;</span>
+                        <a target="_blank"
+                            href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>
+                        <span aria-hidden="true">&#128293;</span>.
+
+                </div>
+
+                <img id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
+            </div>
+
+            <h3 class="test">Fitness</h3>
+
+            <div class="interest">
+                <div class="description">
+                    <p>
+                        I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also
+                        providing functional muscles. Check out the
+                        <a target="_blank"
+                            href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended
+                            Routine</a>, a bodyweight exercise routine designed for beginner through intermediate
+                        fitness enthusiasts.
+                    </p>
+                </div>
+
+                <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+            </div>
+        </div>
 
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
@@ -80,6 +125,5 @@
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             </div>
         </footer>
-    </body>
 
 </html>
