--- a/projects.html
+++ b/projects.html
@@ -24,20 +24,17 @@
 
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
-                    <!-- <li>
-                        <a tabindex="1" href="index.html">Home</a>
-                    </li> -->
                     <li>
-                        <a tabindex="2" href="about.html">About</a>
+                        <a tabindex="1" href="index.html">About</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="projects.html" class="active">Projects</a>
+                        <a tabindex="2" href="projects.html" class="active">Projects</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                     </li>
                     <li>
-                        <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
+                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
                             class="github-link">GitHub</a>
                     </li>
                 </ul>
@@ -46,20 +43,17 @@
 
                 <div class="mobile-nav-bar">
                     <ul class="mobile-nav-controls" aria-role="navigation">
-                        <!-- <li>
-                            <a tabindex="1" href="index.html">Home</a>
-                        </li> -->
                         <li>
-                            <a tabindex="2" href="about.html">About</a>
+                            <a tabindex="1" href="index.html">About</a>
                         </li>
                         <li>
-                            <a tabindex="3" href="projects.html" class="active">Projects</a>
+                            <a tabindex="2" href="projects.html" class="active">Projects</a>
                         </li>
                         <li>
-                            <a tabindex="4" href="resume.html" class="resume-link">Resume</a>
+                            <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                         </li>
                         <li>
-                            <a tabindex="5" href="https://github.com/daniel-citrus" target="_blank"
+                            <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
                                 class="github-link">GitHub</a>
                         </li>
                     </ul>
