--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
 
-        <title>About Me</title>
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io//apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io//favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io//favicon-16x16.png">
+        <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+        <title>About</title>
     </head>
 
     <body>
