--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- Scripts -->
-        <script defer src="/js/mobile-nav.js"></script>
-        <script defer src="/js/theme-switch.js"></script>
+        <script defer src="/assets/js/mobile-nav.js"></script>
+        <script defer src="/assets/js/theme-switch.js"></script>
 
         <!-- Stylesheets -->
-        <link href="/css/root.css" type="text/css" rel="stylesheet">
-        <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/root.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/themes/dark.css" type="text/css" rel="stylesheet">
 
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io//apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io//favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io//favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
         <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
         <title>About</title>
     </head>
@@ -65,8 +65,8 @@
                 </div>
 
                 <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
-                    <img src="/media/icons/sun-Freepik.png" class="sun">
-                    <img src="/media/icons/newmoon-Freepik.png" class="moon">
+                    <img src="/assets/media/icons/sun-Freepik.png" class="sun">
+                    <img src="/assets/media/icons/newmoon-Freepik.png" class="moon">
                 </button>
             </div>
         </div>
@@ -102,7 +102,7 @@
 
                 </div>
 
-                <img id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
+                <img id="money_saver" src="/assets/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
             </div>
 
             <h3 class="test">Fitness</h3>
@@ -119,7 +119,7 @@
                     </p>
                 </div>
 
-                <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+                <img id="pushups_gif" src="/assets/media/pushups.gif" alt="A person doing pushups.">
             </div>
         </div>
 
