--- a/projects.html
+++ b/projects.html
@@ -8,17 +8,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- Scripts -->
-        <script defer src="/js/mobile-nav.js"></script>
-        <script defer src="/js/theme-switch.js"></script>
+        <script defer src="/assets/js/mobile-nav.js"></script>
+        <script defer src="/assets/js/theme-switch.js"></script>
 
         <!-- Stylesheets -->
-        <link href="/css/root.css" type="text/css" rel="stylesheet">
-        <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
-        
+        <link href="/assets/css/root.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/themes/dark.css" type="text/css" rel="stylesheet">
+
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io//apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io//favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io//favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
         <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
         <title>Projects</title>
     </head>
@@ -65,8 +65,8 @@
                 </div>
 
                 <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
-                    <img src="/media/icons/sun-Freepik.png" class="sun">
-                    <img src="/media/icons/newmoon-Freepik.png" class="moon">
+                    <img src="/assets/media/icons/sun-Freepik.png" class="sun">
+                    <img src="/assets/media/icons/newmoon-Freepik.png" class="moon">
                 </button>
             </div>
         </div>
@@ -74,11 +74,11 @@
         <h1>Projects</h1>
 
         <div class="projects">
-            <a href="../projects/etch-a-sketch/index.html">
+            <a href="../projects/etch-a-sketch/etch.html">
                 <div class="title">Etch-a-Sketch</div>
                 <div class="project rps"></div>
             </a>
-            <a href="../projects/rps/index.html">
+            <a href="../projects/rps/rps.html">
                 <div class="title">Rock, Paper, Scissors</div>
                 <div class="project eas"></div>
             </a>
