--- a/resume.html
+++ b/resume.html
@@ -8,12 +8,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- Scripts -->
-        <script defer src="/js/mobile-nav.js"></script>
-        <script defer src="/js/theme-switch.js"></script>
+        <script defer src="/assets/js/mobile-nav.js"></script>
+        <script defer src="/assets/js/theme-switch.js"></script>
 
         <!-- Stylesheets -->
-        <link href="/css/root.css" type="text/css" rel="stylesheet">
-        <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/root.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/themes/dark.css" type="text/css" rel="stylesheet">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io//apple-touch-icon.png">
@@ -65,15 +65,15 @@
                 </div>
 
                 <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
-                    <img src="/media/icons/sun-Freepik.png" class="sun">
-                    <img src="/media/icons/newmoon-Freepik.png" class="moon">
+                    <img src="/assets/media/icons/sun-Freepik.png" class="sun">
+                    <img src="/assets/media/icons/newmoon-Freepik.png" class="moon">
                 </button>
             </div>
         </div>
 
         <h1>Resume</h1>
 
-        <iframe src="/media/Calvo, Daniel - Resume.pdf#" id="resume"></iframe>
+        <iframe src="/assets/media/Calvo, Daniel - Resume.pdf#" id="resume"></iframe>
 
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
