--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <div class="top-container">
-            <img src="" class="main-logo">
+            <img src="/assets/media/profile-square.jpg" class="main-logo">
 
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
