--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 
     <body>
         <div class="top-container">
-            <img src="" class="main-logo">
+            <img src="">
 
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
