--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
         </div>
 
         <footer>
-            <div class="social"></div>
             <div>
-                Icons from <a href="https://www.freepik.com" title="Freepik">Freepik</a> at <a
-                    href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
+                Powered by <a href="https://github.com/">Github</a>
+            </div>
+            <div>
+                Media from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
             </div>
         </footer>
-
 </html>
