--- a/projects.html
+++ b/projects.html
@@ -78,21 +78,26 @@
         <h1>Projects</h1>
 
         <div class="projects">
-            <a href="../projects/etch-a-sketch/etch.html">
+            <a href="/projects/calculator/calculator.html">
+                <div class="title">Calculator</div>
+                <div class="project calc"></div>
+            </a>
+            <a href="/projects/etch-a-sketch/etch.html">
                 <div class="title">Etch-a-Sketch</div>
                 <div class="project rps"></div>
             </a>
-            <a href="../projects/rps/rps.html">
+            <a href="/projects/rps/rps.html">
                 <div class="title">Rock, Paper, Scissors</div>
                 <div class="project eas"></div>
             </a>
         </div>
 
         <footer>
-            Powered by <a href="https://github.com/">Github.com</a>
             <div>
-                Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                Powered by <a href="https://github.com/">Github</a>
+            </div>
+            <div>
+                Media from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
             </div>
         </footer>
     </body>
