--- a/resume.html
+++ b/resume.html
@@ -80,13 +80,13 @@
         <iframe src="/assets/media/Calvo, Daniel - Resume.pdf#" id="resume"></iframe>
 
         <footer>
-            Powered by <a href="https://github.com/">Github.com</a>
             <div>
-                Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                Powered by <a href="https://github.com/">Github</a>
+            </div>
+            <div>
+                Media from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
             </div>
         </footer>
-
     </body>
 
 </html>
