add sign-up form

--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,10 @@
         <h1>Projects</h1>
 
         <div class="projects">
+            <a href="/projects/sign-up-form/sign-up-form.html">
+                <div class="title">Sign-up Form</div>
+                <div class="project form"></div>
+            </a>
             <a href="/projects/calculator/calculator.html">
                 <div class="title">Calculator</div>
                 <div class="project calc"></div>
