--- a/projects/sign-up-form/index.html
+++ b/projects/sign-up-form/index.html
@@ -65,7 +65,7 @@
                                     pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[~!@#$%&*_])[A-Za-z\d~!@#$%&*_]{8,}$"
                                     id="pwd" required>
                                 <span>
-                                    <div class="list-header">Password must contain contain atleast:</div>
+                                    <div class="list-header">Password must contain contain:</div>
                                     <ul class="pwd-requirements">
                                         <li id="pwd-uppercase">1 uppercase letter</li>
                                         <li id="pwd-lowercase">1 lowercase letter</li>
