restore file paths

--- a/projects/sign-up-form/index.html
+++ b/projects/sign-up-form/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/assets/styles/style.css">
-        <script src="/assets/script.js" defer></script>
+        <link rel="stylesheet" type="text/css" href="/projects/sign-up-form/assets/styles/style.css">
+        <script src="/projects/sign-up-form/assets/script.js" defer></script>
         <title>Woodland Pines</title>
     </head>
 
@@ -14,7 +14,7 @@
         <div class="application">
             <div id="woodlands">
                 <div class="logo">
-                    <img src="/assets/media/logo.png" alt="Woodland Pines logo">
+                    <img src="/projects/sign-up-form/assets/media/logo.png" alt="Woodland Pines logo">
                     <div class="logo-text">Woodland Pines</div>
                 </div>
                 <label for="woodlands">Photo by <a
